--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,17 @@
 [project]
 name = "spotax"
 version = "0.1.0"
-description = "CLI tool for orchestrating JAX training on Google Cloud Spot TPUs"
+description = "CLI tool for running JAX training on Google Cloud Spot TPUs with automatic preemption recovery and checkpoint resumption"
 readme = "README.md"
 requires-python = ">=3.10"
-license = { text = "MIT" }
-authors = [{ name = "SpotJAX Team" }]
+license = { text = "Apache 2.0" }
 keywords = ["jax", "tpu", "gcp", "spot", "training", "ml"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Environment :: Console",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -24,11 +23,8 @@ dependencies = [
     "rich>=13.0.0",
     "asyncssh>=2.14.0",
     "google-cloud-tpu>=1.18.0",
-    "google-cloud-compute>=1.14.0",
     "google-cloud-storage>=2.14.0",
     "pydantic>=2.5.0",
-    "pyyaml>=6.0",
-    "jax>=0.6.2",
 ]
 
 [project.optional-dependencies]
@@ -76,3 +72,6 @@ known-first-party = ["spotax"]
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]
+
+[project.urls]
+Homepage = "https://github.com/kiligon/spotax"
